fixed alignment with footer

--- a/src/components/landing-page/footer/footer.css
+++ b/src/components/landing-page/footer/footer.css
@@ -2,11 +2,8 @@ footer {
   background: rgb(249, 246, 239);
   color: #211818;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   align-items: center;
-  /* padding: 10px;
-  margin-top: 80px; */
 }
 
 footer p {
